--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,90 @@
-Flask==0.10.1
-Jinja2==2.7
-PyParse==1.1.7
-simplejson==3.3.1
-static==1.0.2
-virtualenv==1.11.4
+BeautifulSoup==3.2.1
+Django==1.6.5
+Flask==0.11.1
+Flask-Login==0.3.2
+Flask-OAuthlib==0.9.1
+Flask-PyMongo==0.4.1
+Flask-SQLAlchemy==2.0
+Flask-WTF==0.12
+Jinja2==2.8
+MarkupSafe==0.23
+MySQL-python==1.2.5
+Pillow==3.0.0
+SQLAlchemy==0.9.8
+Twisted==13.2.0
+WTForms==2.0.2
+Werkzeug==0.11.11
+altgraph==0.10.2
+argparse==1.2.1
+bdist-mpkg==0.5.0
+bonjour-py==0.3
+click==6.6
+django-mongodb-engine==0.5.2
+djangotoolbox==1.6.2
+flask-mongoengine==0.7.1
+httplib2==0.9
+itsdangerous==0.24
+macholib==1.5.1
+matplotlib==1.3.1
+modulegraph==0.10.4
+mongoengine==0.10.0
+ndg-httpsclient==0.4.2
+numpy==1.8.0rc1
+oauth2==1.5.211
+oauthlib==1.0.3
+pdfminer==20140328
+py2app==0.7.3
+pyOpenSSL==16.2.0
+pyasn1==0.1.9
+pymongo==3.0.3
+pyobjc-core==2.5.1
+pyobjc-framework-Accounts==2.5.1
+pyobjc-framework-AddressBook==2.5.1
+pyobjc-framework-AppleScriptKit==2.5.1
+pyobjc-framework-AppleScriptObjC==2.5.1
+pyobjc-framework-Automator==2.5.1
+pyobjc-framework-CFNetwork==2.5.1
+pyobjc-framework-Cocoa==2.5.1
+pyobjc-framework-Collaboration==2.5.1
+pyobjc-framework-CoreData==2.5.1
+pyobjc-framework-CoreLocation==2.5.1
+pyobjc-framework-CoreText==2.5.1
+pyobjc-framework-DictionaryServices==2.5.1
+pyobjc-framework-EventKit==2.5.1
+pyobjc-framework-ExceptionHandling==2.5.1
+pyobjc-framework-FSEvents==2.5.1
+pyobjc-framework-InputMethodKit==2.5.1
+pyobjc-framework-InstallerPlugins==2.5.1
+pyobjc-framework-InstantMessage==2.5.1
+pyobjc-framework-LatentSemanticMapping==2.5.1
+pyobjc-framework-LaunchServices==2.5.1
+pyobjc-framework-Message==2.5.1
+pyobjc-framework-OpenDirectory==2.5.1
+pyobjc-framework-PreferencePanes==2.5.1
+pyobjc-framework-PubSub==2.5.1
+pyobjc-framework-QTKit==2.5.1
+pyobjc-framework-Quartz==2.5.1
+pyobjc-framework-ScreenSaver==2.5.1
+pyobjc-framework-ScriptingBridge==2.5.1
+pyobjc-framework-SearchKit==2.5.1
+pyobjc-framework-ServiceManagement==2.5.1
+pyobjc-framework-Social==2.5.1
+pyobjc-framework-SyncServices==2.5.1
+pyobjc-framework-SystemConfiguration==2.5.1
+pyobjc-framework-WebKit==2.5.1
+pyparsing==2.0.1
+python-dateutil==1.5
+pytz==2013.7
+redis==2.10.5
+requests==2.7.0
+requests-oauthlib==0.5.0
+scipy==0.13.0b1
+six==1.4.1
+stevedore==1.0.0
+vboxapi==1.0
+virtualenv==1.11.6
+virtualenv-clone==0.2.5
+virtualenvwrapper==4.3.1
 wsgiref==0.1.2
-requests==0.11.1
+xattr==0.6.4
+zope.interface==4.1.1
